# C-FS

./: .gitignore  CMakeLists.txt  README.md  run.sh
src/: main.c
src/disk/: disk.c  disk.h
src/fs/: cfs.c  cfs.h
src/logging/: logging.c  logging.h
src/thread/: lock.h
src/types/: typecheck.h
